# pyblast2

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  BLAST.py  DEVELOPER_NOTES.md  Dockerfile  Makefile  Pipfile  README.md  TODO.md  __init__.py  automate_bash_installation.sh  das_seqio.py  dashboard.py  install_blast.sh  printsyspath.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run.py  seqio.py  setup.py  temp.py  tox.ini  utils.py
.github/workflows/: buildpackage.yml  pythonpackage.yml
.keats/: changelog.json  changelog.md
blast_bin/: __init__.py  _paths.txt  install_blast.py  install_manager.py
blast_installer/: python_ftp.py
core/: BLAST.py  __init__.py  blast.py  seqio.py
pyblast/: __bin__.py  __init__.py  __version__.py  blast.py  cli.py  constants.py  exceptions.py  log.py  models.py  parser.py  pysequence.py  results.py  schema.py  seqio.py  serializer.py  utils.py
pyblast/_version/: version.json
pyblast/blast/: __init__.py  bioblastfactory.py  blast.py  blast_parser.py  constants.py  json_parser.py  result_container.py  seqdb.py  utils.py
pyblast/blast_bin/: __init__.py  blast_wrapper.py  install_blast.py
pyblast/utils/: __init__.py  cmd.py  dna_bases.py  seq_parser.py  span.py
tests/: conftest.py  test_BLAST.py  test_generate_json.py  test_parser.py  test_pyseqdb.py  test_pysequence.py  test_pytest.py  test_schema.py  test_seq_db.py  test_seqio.py  test_sequence_schema.py  test_serializers.py  test_threading.py
tests/.cache/v/cache/: lastfailed
tests/data/test_data/: primer.json  query.json  templates.json
tests/data/test_data/seqio_plasmids/: linear_test_dna.gb
tests/data/test_data/seqio_plasmids/concatenated/: concat.fasta  concat.json
tests/test_blast/: example_file.txt  test_BLAST.py  test_bioblast.py  test_bioblast_factory.py  test_blast_parser.py  test_json_blast.py  test_pseudocircularize.py  test_seq_record_blast.py
tests/test_blast/test_bioblast/: test_bioblast.py  test_bioblast_factory.py  test_validate_bioblast_results.py
tests/test_install_blast/: test_install_blast.py
tests/test_readme/: test_readme.py
tests/test_utils/: dna.json  test_sanity_check.py  test_sequence_parsers.py  test_span.py
tests/test_utils/files/: dna1.fsa  dna2.fsa
