[tool.poetry]
name = "pyblastbio"
version = "0.2.13"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://www.github.com/jvrana/pyblast"
repository = "https://www.github.com/jvrana/pyblast"
documentation = "https://www.github.com/jvrana/pyblast"
readme = 'README.md'
packages = [
    { include = "pyblast" }
]

[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.1.3"
biopython = "^1.73"
networkx = "^2.3"
termcolor = "^1.1"

[tool.poetry.dev-dependencies]
black = { version = "^19.3b0", python = "^3.6" }
pytest = "^4.6"
pre-commit = "^1.17"
toml = "^0.10.0"
pandoc = "^1.0"
coveralls = "^1.8"
pytest-cov = "^2.7"
pylint = "^2.3"
tox = "^3.13"
tox-conda = "^0.2.0"
keats = "^0.2.19"

[tool.poetry.scripts]
pyblast = 'pyblast:cli.main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"