[tool.poetry]
name = "pyblastbio"
version = "0.8"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://www.github.com/jvrana/pyblast"
repository = "https://www.github.com/jvrana/pyblast"
documentation = "https://www.github.com/jvrana/pyblast"
readme = 'README.md'
packages = [
    { include = "pyblast" }
]

[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.3"
biopython = "^1.73"
networkx = "^2.4"
termcolor = "^1.1"
loggable-jdv = "^0.1.4"

# documentations
sphinx = {"version"="^2.2", "optional"=true}
sphinx-bootstrap-theme = {"version"="^0.7.1", "optional"=true}
nbsphinx = {"version"="^0.4.3", "optional"=true}
recommonmark = {"version"="^0.6.0", "optional"=true}
sphinx_autodoc_typehints = {"version"="^1.8", "optional"=true}
pandoc = {"version"="^1.0", "optional"=true}

# styling
black = { version = "^19.3b0", python = "^3.6", "optional"=true}
coveralls = { version = "^1.8", "optional"=true}
pytest-cov = { version = "^2.7", "optional"=true}
pre-commit = { version = "^1.17", "optional"=true}
pylint = { version = "^2.3", "optional"=true}
tox = { version = "^3.13", "optional"=true}
tox-conda = { version = "^0.2.0", "optional"=true}

[tool.poetry.extras]
documentation = ['sphinx', 'sphinx-bootstrap-theme', 'nbsphinx', 'recommonmark', 'sphinx_autodoc_typehints', 'pandoc']
testing = ['black', 'coveralls', 'pytest-cov', 'pylint', 'coveralls', 'pre-commit', 'tox']
toxconda = ['tox-conda']

[tool.poetry.dev-dependencies]
pytest = "^4.6"
numpy = "^1.17"

[tool.poetry.scripts]
pyblast = 'pyblast:cli.main'

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
