[tool.poetry]
name = "pyblastbio"
version = "0.9"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://www.github.com/jvrana/pyblast2"
repository = "https://www.github.com/jvrana/pyblast2"
documentation = "https://www.github.com/jvrana/pyblast2"
readme = 'README.md'
packages = [
    { include = "pyblast" }
]

[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.3"
biopython = "^1.73"
networkx = "^2.4"
termcolor = "^1.1"
loggable-jdv = "^0.1.4"

tox = { version = "^3.13", "optional"=true}
tox-conda = { version = "^0.2.0", "optional"=true}

[tool.poetry.extras]
testing = ['tox', 'tox-conda']

[tool.poetry.dev-dependencies]
numpy = "^1.17"
pytest = "^6.0.2"
pytest-xdist = "^2.1.0"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
pyblast = 'pyblast:cli.main'

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
